--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 <!-- JavaScript for Bootstrap -->
 <script
-  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
 <script
   src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
@@ -43,7 +43,9 @@
   integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
   crossorigin="anonymous"></script>
 
-<script>
+<script  type="module">
+  import OverlayCarousel from './carousel.js';
+
   // sample data
   const productName = "Organic Tassel Stripe Bath Mat - Dark Horseradish";
   // const imageHrefs = [
@@ -62,15 +64,11 @@
     'https://assets.weimgs.com/weimgs/rk/images/wcm/products/202014/0951/organic-tassel-stripe-bath-mat-stone-white-m.jpg',
     'https://assets.weimgs.com/weimgs/rk/images/wcm/products/202029/0066/organic-striped-arrow-edge-jacquard-shower-curtain-m.jpg'
   ];
-</script>
 
-<script  type="module">
-  import OverlayCarousel from './carousel.js';
   window.addEventListener('load', () => {
     const btnShow = document.getElementById('show-button');
     const carousel = new OverlayCarousel({
-      maxWidth: '400px',
-      thumbnailHoverOutline: '2px solid dodgerblue'
+      modalMaxWidth: '400px'
     });
     carousel.populate(productName, imageHrefs);
 
