--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
         crossorigin="anonymous">
 
-  <title>Bootstrap Modal with Image Carousel</title>
+  <title>Bootstrap Modal with Image Gallery</title>
 
 </head>
-<body class="wsi-body">
+<body>
 <header>
-  <h1 class="wsi-h1 text-center">Bootstrap Modal with Image Carousel</h1>
+  <h1 class="container text-center">Bootstrap Modal with Image Gallery</h1>
   <p class="text-center">
     <button id="show-button" class="btn btn-primary">
       Show Modal
@@ -30,24 +30,15 @@
 <main></main>
 
 <!-- JavaScript for Bootstrap -->
-<script
-  src="https://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-  crossorigin="anonymous"></script>
-<script
-  src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-  crossorigin="anonymous"></script>
-<script
-  src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-  crossorigin="anonymous"></script>
-
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 <script  type="module">
   import OverlayCarousel from './carousel.js';
 
   // sample data
-  const productName = "Organic Tassel Stripe Bath Mat - Dark Horseradish";
+  const productName = "Sample Images";
   // const imageHrefs = [
   //   'https://assets.weimgs.com/weimgs/rk/images/wcm/products/202039/0013/organic-tassel-stripe-bath-mat-dark-horseradish-m.jpg'
   // ];
@@ -56,9 +47,10 @@
     'https://assets.weimgs.com/weimgs/rk/images/wcm/products/202035/0077/organic-tassel-stripe-bath-mat-m.jpg',
     'https://assets.weimgs.com/weimgs/rk/images/wcm/products/202038/0151/organic-tassel-stripe-bath-mat-stone-white-m.jpg',
     'https://assets.weimgs.com/weimgs/rk/images/wcm/products/202019/0034/west-elm-chelsea-bathroom-refresh-bundle-1-m.jpg',
+    'imgs/661-400x200.jpg',
     'https://assets.weimgs.com/weimgs/rk/images/wcm/products/202039/0013/organic-tassel-stripe-bath-mat-dark-horseradish-1-m.jpg',
     'https://assets.weimgs.com/weimgs/rk/images/wcm/products/202036/0053/organic-tassel-stripe-bath-mat-1-m.jpg',
-    'https://assets.weimgs.com/weimgs/rk/images/wcm/products/202035/0076/organic-tassel-stripe-bath-mat-m.jpg',
+    'imgs/177-300x400.jpg',
     'https://assets.weimgs.com/weimgs/rk/images/wcm/products/202026/0006/organic-tassel-stripe-bath-mat-m.jpg',
     'https://assets.weimgs.com/weimgs/rk/images/wcm/products/202026/0006/belgian-flax-linen-shower-curtain-m.jpg',
     'https://assets.weimgs.com/weimgs/rk/images/wcm/products/202014/0951/organic-tassel-stripe-bath-mat-stone-white-m.jpg',
@@ -68,7 +60,7 @@
   window.addEventListener('load', () => {
     const btnShow = document.getElementById('show-button');
     const carousel = new OverlayCarousel({
-      modalMaxWidth: '400px'
+      headerPadding: '0.5rem 1rem'
     });
     carousel.populate(productName, imageHrefs);
 
