--- a/index.build.html
+++ b/index.build.html
@@ -29,13 +29,14 @@
 <main></main>
 
 <!-- JavaScript for Bootstrap -->
-<!-- JS, Popper.js, and jQuery -->
 <script src="//code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="//stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-<script type="module">
-  import OLCarousel from './carousel.js';
+<script src="./build/js/carousel.bundle.js"></script>
+<script>
+  const OverlayCarousel = OLCarousel.default;
+
   // sample data
   const productName = "Sample Images";
   const imageHrefs = [
@@ -56,7 +57,7 @@
   function initPage () {
     console.log('index.html initPage()');
     const btnShow = document.getElementById('show-button');
-    const carousel = new OLCarousel({
+    const carousel = new OverlayCarousel({
       headerPadding: '0.5rem 1rem'
     });
 
