general clean up + refactor

--- a/index.build.html
+++ b/index.build.html
@@ -8,12 +8,19 @@
   <meta name="description"
         content="a responsive component overlay containing an image gallery with scrollable thumbnails">
 
-  <title>Component — Responsive Image Gallery Overlay</title>
+  <title>Web Component — Responsive Image Gallery Overlay</title>
 
 </head>
 <body style="padding: 1rem">
 <header>
-  <h1 class="container text-center">Responsive Image Gallery Overlay</h1>
+  <h1 class="container text-center">Web Component - Responsive Image Gallery
+    Overlay</h1>
+  <p>
+    GitHub:
+    <a href="https://github.com/terrymorse58/image-gallery-overlay">
+      terrymorse58/image-gallery-overlay
+    </a>
+  </p>
   <p class="text-center">
     <button id="show-button" style="font-size: 200%; border-radius: 8px;
     padding: 1rem">
