--- a/demo/index.html
+++ b/demo/index.html
@@ -53,21 +53,22 @@
 
 <script src="../dist/js/image-gallery.bundle.js"></script>
 <script>
+  const Gallery = IGOverlay.default;
   // sample data
   const productName = 'Sample Images';
   const imageHrefs = [
-    '../imgs/613-200x300.jpg',
-    '../imgs/953-200x200.jpg',
-    '../imgs/810-300x400.jpg',
-    '../imgs/688-400x300.jpg',
-    '../imgs/661-400x200.jpg',
-    '../imgs/222-400x300.jpg',
-    '../imgs/623-400x400.jpg',
-    '../imgs/177-300x400.jpg',
-    '../imgs/1019-300x400.jpg',
-    '../imgs/498-300x400.jpg',
-    '../imgs/631-300x300.jpg',
-    '../imgs/987-400x200.jpg'
+    './imgs/613-200x300.jpg',
+    './imgs/953-200x200.jpg',
+    './imgs/810-300x400.jpg',
+    './imgs/688-400x300.jpg',
+    './imgs/661-400x200.jpg',
+    './imgs/222-400x300.jpg',
+    './imgs/623-400x400.jpg',
+    './imgs/177-300x400.jpg',
+    './imgs/1019-300x400.jpg',
+    './imgs/498-300x400.jpg',
+    './imgs/631-300x300.jpg',
+    './imgs/987-400x200.jpg'
   ];
   const imgTitles = [
     'Golden Gate Bridge',
@@ -88,7 +89,7 @@
     // console.log('index.html initPage()');
     const btnShow = document.getElementById('show-button');
     const spinner = document.getElementById('spinner');
-    const gallery = IGOverlay.default({
+    const gallery = new Gallery({
       headerPadding: '0.5rem 1rem'
     });
 
